# scylla

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  pyproject.toml  pytest.ini  test-stack.yml  tox.ini
.github/workflows/: push.yml
scylla/: client.py
tests/integration/: conftest.py
tests/integration/resources/: conftest.py  test_domain.py  test_permission.py  test_permission_link.py  test_project.py  test_user.py  test_user_role.py  util.py
tests/resources/: conftest.py  util.py
tests/resources/domain/: conftest.py  test_domain.py
tests/resources/permission/: conftest.py  test_permission.py
tests/resources/project/: conftest.py  test_project.py
tests/resources/user/: conftest.py  test_user.py
tests/resources/user_permission_link/: conftest.py  test_permission_link.py
tests/resources/user_role/: conftest.py  test_user_role.py
tests/unit/: conftest.py  test_client.py
