[tool.poetry]
name = "scylla"
version = "0.1.0"
description = "Scylla - client for charybdis permission manager"
authors = ["Alexander Lavrov <egnod@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )
)
'''

